fixed layout bug

--- a/_static/src/assets/scss/objects/layout/_viewWindow.scss
+++ b/_static/src/assets/scss/objects/layout/_viewWindow.scss
@@ -34,10 +34,13 @@ Layout for paneled views
 
 .viewWindow-panel-content-inner {
     min-height: 100%;
-    padding-top: 70px;
     box-sizing: border-box;
     position: relative;
     background: #ffffff;
+}
+
+.viewWindow-panel_story .viewWindow-panel-content-inner {
+    padding-top: 70px;
 }
 
 // .viewWindow-panel.isActive > .viewWindow-panel-content {
@@ -109,7 +112,7 @@ Layout for paneled views
         overflow-y: hidden;
     }
 
-    .viewWindow-panel-content-inner {
+    .viewWindow-panel_story .viewWindow-panel-content-inner {
         padding-top: 0;
     }
 }
